fix: Adjust width unit for sidebar on smaller screens

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -519,7 +519,7 @@ article.todo-card {
     /* Take up the entire screen on smaller devices */
     @media (max-width: 425px) {
         .side-bar {
-            width: 100vw;
+            width: 100%;
         }
     }
 }
